@@ -1,3 +1,7 @@
+Wed May 31 16:05:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added support for default settings.
+
 Tue May 30 17:52:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Stopped unnecessary options copying.
